# mandrake

./: Cargo.toml  README.md
.github/workflows/: ci-cd.yml
src/: app.rs  args.rs  error.rs  main.rs  mandrake.rs  result.rs
