# Copyright 2025 Nicolas Spijkerman
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "mandrake"
version = "0.1.0"
authors = ["Nicolas Spijkerman <nicospijke@gmail.com>"]
categories = ["multimedia::audio"]
description = "Harmless annoying noises generator"
documentation = "README.md"
edition = "2024"
homepage = "https://github.com/NickSpyker/mandrake/blob/main/README.md"
keywords = ["audio", "sound"]
license = "MIT or Apache-2.0"
publish = false
readme = "README.md"
repository = "https://github.com/NickSpyker/mandrake"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
libc = { version = "0.2.178", features = ["default"] }
rodio = { version = "0.21.1", features = ["default"] }
rand = { version = "0.9.2", features = ["default"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Console"] }
